--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section{
 }
 section .title{
     position: relative;
-    text-align: start;
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
     margin-bottom: 60px;
@@ -92,9 +92,9 @@ section .title::after{
 }
 .navbar .logo a{
     color: #fff;
-    font-size: 35px;
+    font-size: 30px;
     font-family: Times;
-    margin-left: 50px;
+    margin-left: 10px;
     font-weight: 550;
 }
 .navbar .logo a span{
