--- a/style.css
+++ b/style.css
@@ -568,7 +568,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    font-size: 15px;
+    font-size: 20px;
     color: #3a6cf4;
     text-decoration: none;
 }
@@ -627,23 +627,26 @@ footer span a:hover{
     .main h2{
         margin-top: 150px;
         font-size: 20px;
+        font-width: 500;
         margin-left: 30px;
     }
     .main h2 span {
         font-size: 25px;
+        font-width: 600; 
         margin-left: 20px;
     }
     .main h3 {
         font-size: 20px;
+        font-width: 500;
         margin-left: 20px;
         padding: 10px 30px;
     }
     .main-btn {
-        font-size: 1rem;
+        font-size: 2rem;
         margin-left: 50px;
     }
     .social-icons a {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .max-width{
         max-width: 930px;
@@ -738,8 +741,8 @@ footer span a:hover{
       font-size: 62%;
     }
     .media-icons a{
-        font-size: 1rem;
-        padding: 7;
+        font-size: 1.2rem;
+        padding: 7px;
     }
   }
   
