--- a/style.css
+++ b/style.css
@@ -638,16 +638,16 @@ footer span a:hover{
     .main h3 {
         font-size: 20px;
         font-width: 550;
-        margin-left: 15px;
+        margin-left: 18px;
         padding: 10px 20px;
     }
     .main-btn {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         margin-left: 30px;
     }
     .social-icons a {
         font-size: 1.2rem;
-        padding-left: 5px;
+        padding: 5px;
     }
     .max-width{
         max-width: 930px;
