--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section .title::after{
 }
 .navbar .logo a{
     color: #fff;
-    font-size: 30px;
+    font-size: 50px;
     font-family: Times;
     margin-left: 5px;
     font-weight: 550;
@@ -602,6 +602,12 @@ footer span a:hover{
     .menu-btn i.active:before{
         content: "\f00d";
     }
+    .navbar .logo a{
+    color: #fff;
+    font-size: 20px;
+    font-family: Times;
+    font-weight: 450;
+}
     .navbar .menu{
         position: fixed;
         height: 100vh;
