--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section .title::after{
 }
 .navbar .logo a{
     color: #fff;
-    font-size: 50px;
+    font-size: 40px;
     font-family: Times;
     margin-left: 5px;
     font-weight: 550;
@@ -604,7 +604,7 @@ footer span a:hover{
     }
     .navbar .logo a{
     color: #fff;
-    font-size: 20px;
+    font-size: 25px;
     font-family: Times;
     font-weight: 450;
 }
@@ -694,6 +694,12 @@ footer span a:hover{
     .services .serv-content .card{
         width: 100%;
     }
+    .navbar .logo a{
+    color: #fff;
+    font-size: 30px;
+    font-family: Times;
+    font-weight: 450;
+}
 }
 @media (max-width: 630px) {
     .home .home-content .text-2{
